--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,8 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# Custom directories and files to ignore
+
+*/node_modules
+*/config.js
